# MHTH

./: .gitignore  .p4ignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  local.yml
.github/workflows/: ci.yml
crates/matchmaking/: Cargo.toml  build.rs
crates/matchmaking/protos/: console.proto  matchmaking.proto
crates/matchmaking/src/: internal_clients.rs  lib.rs  progression.rs
crates/matchmaking/src/nakama/: endpoints.rs  helpers.rs  mod.rs
crates/matchmaking/src/regions/: mod.rs
crates/matchmaking/src/rpc/: helper.rs  mod.rs  player_impl.rs  server.rs
crates/matchmaking/src/rpc/server/: auth.rs  healthcheck.rs  integration_tests.rs  mod.rs
crates/matchmaking/src/rpc/worker/: can_match.rs  find_matches.rs  form_match.rs  mod.rs  start_matches.rs
crates/skillratings/: Cargo.toml  README.md
crates/skillratings/benches/benchmarks/: elo_bench.rs  glicko2_bench.rs  trueskill_bench.rs  weng_lin_bench.rs
crates/skillratings/src/: elo.rs  glicko.rs  glicko2.rs  glicko_boost.rs  lib.rs  mhth.rs  sticko.rs  weng_lin.rs
crates/skillratings/src/trueskill/: factor_graph.rs  gaussian.rs  matrix.rs  mod.rs
nakama/: Dockerfile  go.mod  go.sum  healthcheck.go  local-nakama.yml  local.yml  main.go
redis/: redis.conf
