[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.dependencies]
matchmaking = { path = "crates/matchmaking" }
skillratings = { path = "crates/skillratings" }

dotenv = "0.15.0"
serde_json = "1.0"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3"

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[workspace.dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
    "serde"
]