[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.dependencies]
matchmaking = { path = "crates/matchmaking" }
skillratings = { path = "crates/skillratings" }

dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
serde_json = "1.0"
serde_with = "3.14.1"
sha2 = "0.10.9"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3"

chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[workspace.dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
    "serde"
]