[package]
name = "matchmaking"
version = "0.1.0"
edition = "2024"

[dependencies]
skillratings.workspace = true

crc = "3.3"
prost = "0.14.1"
tokio-stream = "0.1"
tonic-types = "0.14"
tonic-prost = "0.14"
tonic = "0.14.2"

bitcode = {version = "0.6.7", features = ["serde", "uuid"] }
redis = { version = "0.32.5", features = ["tokio-comp", "uuid"] }
tokio = { version = "1.47.1", features = ["full"] }

chrono.workspace = true
dotenv.workspace = true
hmac.workspace = true
jwt.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

anyhow = {version = "1.0.99", optional = true}

[dev-dependencies]
testcontainers = "0.25.0"
httpmock = "0.8.0"

[build-dependencies]
tonic-prost-build = "0.14.1"

[features]
anyhow = ["dep:anyhow"]

[[bin]]
name = "matchmaking-server"
path = "src/bin/server.rs"
required-features = ["anyhow"]

[lints.clippy]
all = "deny"
redundant_clone = "deny"
needless_borrow = "deny"
map_unwrap_or = "deny"
manual_ok_or = "deny"
large_enum_variant = "deny"
unnecessary_wraps = "deny"
clone_on_copy = "deny"
needless_collec = "deny"
missing_const_for_fn = "deny"

[lints.rust]
future-incompatible = "warn"
nonstandard_style = "deny"