[package]
name = "skillratings"
version = "0.1.0"
edition = "2024"
description = "Calculate a player's skill rating using algorithms like Elo, Glicko, Glicko-2, TrueSkill and many more."
readme = "README.md"
keywords = ["elo", "glicko", "trueskill", "multiplayer", "rating"]
categories = ["gamedev", "algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
default = ["serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert-eq-float = "0.1.4"

[[bench]]
name = "bench_main"
harness = false
