[package]
name = "skillratings"
version = "0.1.0"
edition = "2024"
description = "Calculate a player's skill rating using algorithms like Elo, Glicko, Glicko-2, TrueSkill and many more."
readme = "README.md"
keywords = ["elo", "glicko", "trueskill", "multiplayer", "rating"]
categories = ["gamedev", "algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
default = ["serde"]

[dependencies]
bitcode = {version = "0.6.7", features = ["serde"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert-eq-float = "0.1.4"

[lints.clippy]
all = "deny"
pedantic = "deny"
redundant_clone = "deny"
needless_borrow = "deny"
map_unwrap_or = "deny"
manual_ok_or = "deny"
large_enum_variant = "deny"
unnecessary_wraps = "deny"
clone_on_copy = "deny"
needless_collec = "deny"
missing_const_for_fn = "deny"

[lints.rust]
future-incompatible = "warn"
nonstandard_style = "deny"